fix: исправление ошибок при тестировании